fixes spacing of last item

--- a/src/assets/css/paceaux.css
+++ b/src/assets/css/paceaux.css
@@ -174,8 +174,4 @@
         justify-content: center;
         align-items: center;
     }
-   
-    .linkList:nth-of-type(3n) {
-       flex-basis: 100%;
-    }
 }
